[package]
name = "bevy_vulkano"
version = "0.9.2"
edition = "2021"
authors = ["Okko Hakola <okkohakola@gmail.com>"]
description = "Vulkano Backend for Bevy"
homepage = "https://github.com/hakolao/bevy_vulkano"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/hakolao/bevy_vulkano"
categories = ["gui", "game-development"]
keywords = ["gui", "imgui", "vulkano", "gamedev", "bevy"]

[features]
default = []
example_has_gui = ["gui", "links", "clipboard"]
links = ["gui", "egui_winit_vulkano/links"]
clipboard = ["gui", "egui_winit_vulkano/clipboard"]
gui = ["egui_winit_vulkano"]

[dependencies]
vulkano = "0.32"
vulkano-util = "0.32"
vulkano-shaders = "0.32"
egui_winit_vulkano = { version = "0.21.0", optional = true, default_features = false, features = [] }
winit = "0.27"
image = "0.24.4"
approx = "0.5.1"
raw-window-handle = "0.5"

[dependencies.bevy]
version = "0.9.1"
default-features = false
features = []

[dev-dependencies]
anyhow = "1.0.66"
rand = "0.8.5"
bytemuck = "1.12.3"

