[package]
authors     = ["Okko Hakola <okkohakola@gmail.com>"]
categories  = ["gui", "game-development"]
description = "Vulkano Backend for Bevy"
edition     = "2021"
homepage    = "https://github.com/hakolao/bevy_vulkano"
keywords    = ["gui", "imgui", "vulkano", "gamedev", "bevy"]
license     = "Apache-2.0"
name        = "bevy_vulkano"
readme      = "README.md"
repository  = "https://github.com/hakolao/bevy_vulkano"
version     = "0.11.0"

[features]
clipboard       = ["gui", "egui_winit_vulkano/clipboard"]
default         = []
example_has_gui = ["gui", "links", "clipboard"]
gui             = ["egui_winit_vulkano"]
links           = ["gui", "egui_winit_vulkano/links"]

[dependencies]
approx = "0.5.1"
egui_winit_vulkano = { version = "0.24.0", optional = true, default_features = false, features = [
] }
image = "0.24.5"
raw-window-handle = "0.5"
vulkano = "0.33"
vulkano-shaders = "0.33"
vulkano-util = "0.33"
winit = "0.28"

[dependencies.bevy]
default-features = false
features         = []
version          = "0.10"

[dev-dependencies]
anyhow   = "1.0.66"
bytemuck = "1.12.3"
rand     = "0.8.5"
